Creada la base de datos y se ha ordenado por paquetes la información de la aplicación. NUEVA VERSIÓN APP: 1.1.0

--- a/app/src/main/res/layout/activity_lug_interes.xml
+++ b/app/src/main/res/layout/activity_lug_interes.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#A79E97"
-    tools:context=".lugInteres">
+    tools:context=".userinterface.lugInteres">
 
     <LinearLayout
         android:layout_width="match_parent"
