--- a/app/src/main/res/layout/activity_prod_list.xml
+++ b/app/src/main/res/layout/activity_prod_list.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#A79E97"
-    tools:context=".prodList">
+    tools:context=".userinterface.prodList">
 
     <EditText
         android:id="@+id/editTextProd"
