--- a/app/src/main/res/layout/activity_shop_list.xml
+++ b/app/src/main/res/layout/activity_shop_list.xml
@@ -9,36 +9,38 @@
     tools:context=".userinterface.shopList">
 
     <EditText
-        android:id="@+id/textEdit"
-        android:layout_width="410dp"
-        android:layout_height="68dp"
-        android:layout_marginTop="56dp"
-        android:hint="@string/lista_productos"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/txtNombre"
+        android:layout_width="match_parent"
+        android:layout_height="66dp"
+        android:ems="10"
+        android:hint="@string/nom_Prod"
+        android:inputType="textPersonName" />
+
+    <EditText
+        android:id="@+id/numCant"
+        android:layout_width="match_parent"
+        android:layout_height="59dp"
+        android:ems="10"
+        android:hint="@string/cant_Prod"
+        android:inputType="number" />
+
+    <EditText
+        android:id="@+id/numPrecio"
+        android:layout_width="match_parent"
+        android:layout_height="59dp"
+        android:ems="10"
+        android:hint="@string/prec_Prod"
+        android:inputType="number" />
 
     <Button
         android:id="@+id/btn_agregar"
-        android:layout_width="316dp"
+        android:layout_width="match_parent"
         android:layout_height="63dp"
         android:text="@string/btn_agregar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textEdit"
+        app:layout_constraintTop_toTopOf="@id/numPrecio"
         app:layout_constraintVertical_bias="0.866" />
-
-    <ListView
-        android:id="@+id/listView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="108dp"
-        app:layout_constraintBottom_toTopOf="@+id/textEdit"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 </LinearLayout>
